opam-version: "2.0"
maintainer: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
authors: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
license: "ISC"
homepage: "https://github.com/mirage/awa-ssh"
bug-reports: "https://github.com/mirage/awa-ssh/issues"
dev-repo: "git+https://github.com/mirage/awa-ssh.git"
doc: "https://mirage.github.io/awa-ssh/api"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7"}
  "awa" {= version}
  "cstruct" {>= "6.0.0"}
  "mtime" {>= "1.0.0"}
  "lwt"
  "cstruct-unix"
  "mirage-crypto-rng"
]
synopsis: "SSH implementation in OCaml"
description: """The OpenSSH protocol implemented in OCaml."""
