opam-version: "2.0"
maintainer: [ "Christiano F. Haesbaert <haesbaert@haesbaert.org>" "Hannes Mehnert <hannes@mehnert.org>" ]
authors: "Hannes Mehnert <hannes@mehnert.org>"
license: "ISC"
homepage: "https://github.com/mirage/awa-ssh"
bug-reports: "https://github.com/mirage/awa-ssh/issues"
dev-repo: "git+https://github.com/mirage/awa-ssh.git"
doc: "https://mirage.github.io/awa-ssh/api"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.04.2"}
  "dune" {build & >= "1.0"}
  "awa" {= version}
  "cstruct" {>= "1.9.0"}
  "mtime"
  "lwt"
  "mirage-flow" {>= "2.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "logs"
]
synopsis: "SSH implementation in OCaml"
description: """The OpenSSH protocol implemented in OCaml."""