opam-version: "2.0"
maintainer: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
authors: "Christiano F. Haesbaert <haesbaert@haesbaert.org>"
license: "ISC"
homepage: "https://github.com/haesbaert/awa-ssh"
bug-reports: "https://github.com/haesbaert/awa-ssh/issues"
dev-repo: "git+https://github.com/haesbaert/awa-ssh.git"
doc: "https://mirage.github.io/awa-ssh/api"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "1.0"}
  "ppx_sexp_conv"
  "ppx_cstruct"
  "mirage-crypto" {>= "0.8.1"}
  "mirage-crypto-rng"
  "mirage-crypto-pk"
  "x509" {>= "0.10.0"}
  "cstruct" {>= "1.9.0"}
  "cstruct-unix"
  "cstruct-sexp"
  "sexplib"
  "rresult"
  "mtime"
  "logs"
  "fmt"
  "cmdliner"
  "base64" {>= "3.0.0"}
]
synopsis: "SSH implementation in OCaml"
description: """The OpenSSH protocol implemented in OCaml."""