opam-version: "2.0"
maintainer: [ "Christiano F. Haesbaert <haesbaert@haesbaert.org>" "Hannes Mehnert <hannes@mehnert.org>" ]
authors: [ "Christiano F. Haesbaert <haesbaert@haesbaert.org>" "Hannes Mehnert <hannes@mehnert.org>" ]
license: "ISC"
homepage: "https://github.com/mirage/awa-ssh"
bug-reports: "https://github.com/mirage/awa-ssh/issues"
dev-repo: "git+https://github.com/mirage/awa-ssh.git"
doc: "https://mirage.github.io/awa-ssh/api"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7"}
  "mirage-crypto" {>= "0.8.1"}
  "mirage-crypto-rng" {>= "0.11.0"}
  "mirage-crypto-pk"
  "mirage-crypto-ec" {>= "0.10.0"}
  "x509" {>= "0.15.2"}
  "cstruct" {>= "6.0.0"}
  "cstruct-unix"
  "mtime" {>= "1.0.0"}
  "logs"
  "fmt"
  "cmdliner" {>= "1.1.0"}
  "base64" {>= "3.0.0"}
  "zarith"
  "eqaf" {>= "0.8"}
]
conflicts: [ "result" {< "1.5"} ]
synopsis: "SSH implementation in OCaml"
description: """The OpenSSH protocol implemented in OCaml."""
